...
                                                    <constraint firstItem="aCp-22-ala" firstAttribute="height" secondItem="cYG-a0-aaY" secondAttribute="height" id="VLf-Fw-jhZ"/>
                                                    <constraint firstItem="Wo6-6V-Ths" firstAttribute="height" secondItem="cYG-a0-aaY" secondAttribute="height" id="mea-Pv-DqA"/>
                                                </constraints>
                                            </stackView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sd-8v-gbq">
                                                <rect key="frame" x="0.0" y="228" width="200" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="vsR-3m-jm7"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                <state key="normal" title="Войти">
                                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
